--- a/todo
+++ b/todo
@@ -1,2 +1,1 @@
-decide on an orginization framework
-finish the 3rd option and add attribute picking to the script
+create saveable characters for other scripts to refrence
